according to different net to load different page

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -19,6 +19,6 @@
     <item
         android:id="@+id/navigation_search"
         android:icon="@mipmap/search_normal"
-        android:title="@string/title_special" />
+        android:title="@string/title_search" />
 
 </menu>
