--- a/app/src/main/res/layout/fragment_home_pager.xml
+++ b/app/src/main/res/layout/fragment_home_pager.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
         android:text="test"/>
 </LinearLayout>
