--- a/app/src/main/res/layout/item_pager_content.xml
+++ b/app/src/main/res/layout/item_pager_content.xml
@@ -1,20 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp"
+    android:layout_height="wrap_content">
     
     <ImageView
-        android:id="@+id/item_cover_ig"
+        android:id="@+id/goods_cover_ig"
         android:background="@drawable/ic_launcher_background"
         android:layout_width="80dp"
         android:layout_height="80dp"/>
-    <TextView
-        android:id="@+id/item_describe_tx"
-        android:text="石墨烯加热眼罩热敷usb充电发热睡觉遮光睡眠男女护眼缓解眼疲劳热眼罩热敷usb充…"
+    <LinearLayout
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="7dp"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/goods_describe_tx"
+            android:text="石墨烯加热眼罩热敷usb充电发热睡觉遮光睡眠男女护眼缓解眼疲劳热眼罩热敷usb充…"
+            android:layout_marginEnd="7dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/goods_off_prise"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shap_tag_bg"
+            android:padding="2dp"
+            android:text="@string/goods_save_tx"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="4dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="券后价："
+                android:textColor="@color/colorPrimary"/>
+            <TextView
+                android:id="@+id/goods_after_off_prise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="19.80"
+                android:textColor="@color/colorPrimary" />
+            <TextView
+                android:id="@+id/goods_origin_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:textColor="@color/colorGray"
+                android:text="¥ 23"/>
+            <TextView
+                android:id="@+id/goods_sell_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="1000 人已购买"/>
+        </LinearLayout>
+            
+    </LinearLayout>
+
+    
+
 
 
     
