--- a/app/src/main/res/layout/item_pager_content.xml
+++ b/app/src/main/res/layout/item_pager_content.xml
@@ -25,7 +25,7 @@
             android:id="@+id/goods_off_prise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/shap_tag_bg"
+            android:background="@drawable/shape_tag_bg"
             android:padding="2dp"
             android:text="@string/goods_save_tx"
             android:textColor="@color/white"
