--- a/app/src/main/res/layout/fragment_home_pager.xml
+++ b/app/src/main/res/layout/fragment_home_pager.xml
@@ -4,7 +4,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:layout_marginBottom="14dp"
+        android:overScrollMode="never"
+        android:id="@+id/home_looper"/>
+
+
+    <include layout="@layout/include_home_pager_title"/>
+
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="11dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/home_pager_content"/>
