--- a/app/src/main/res/layout/item_pager_content.xml
+++ b/app/src/main/res/layout/item_pager_content.xml
@@ -38,7 +38,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="券后价："
+                android:text="@string/goods_off_prise"
                 android:textColor="@color/colorPrimary"/>
             <TextView
                 android:id="@+id/goods_after_off_prise"
