--- a/app/src/main/res/layout/fragment_home_pager.xml
+++ b/app/src/main/res/layout/fragment_home_pager.xml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
-    <androidx.viewpager.widget.ViewPager
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_marginBottom="14dp"
-        android:overScrollMode="never"
-        android:id="@+id/home_looper"/>
+        android:layout_height="200dp"
+        android:layout_marginBottom="14dp">
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/home_looper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never" />
+
+        <LinearLayout
+            android:id="@+id/looper_point"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:orientation="horizontal" />
+    </RelativeLayout>
 
 
-    <include layout="@layout/include_home_pager_title"/>
+    <include layout="@layout/include_home_pager_title" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="11dp"
+        android:id="@+id/home_pager_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/home_pager_content"/>
+        android:layout_marginTop="11dp" />
 
 
 </LinearLayout>
